Bug 19128 - Bug box while building asharp
Summary: Bug box while building asharp
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: ada (show other bugs)
Version: 4.0.0
: P2 normal
Target Milestone: 4.0.0
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2004-12-22 06:05 UTC by sohail
Modified: 2004-12-30 14:30 UTC (History)
1 user (show)

See Also:
Host: i686-pc-linux-gnu
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2004-12-29 14:32:17


Attachments
All required files, concatenated without any header (217.84 KB, text/plain)
2004-12-22 06:14 UTC, sohail
Details
All required files, concatenated without any header (217.84 KB, application/octet-stream)
2004-12-22 06:21 UTC, sohail
Details
return value assigned to incorrect variable (352 bytes, patch)
2004-12-29 07:17 UTC, sohail
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description sohail 2004-12-22 06:05:44 UTC
gcc version 4.0.0 20041212 (experimental)

actual line: gcc -c -g -O -gnatgpa -gnatwF -I. -I- jx_ch4.adb

+===========================GNAT BUG DETECTED==============================+
| 4.0.0 20041212 (experimental) (i686-pc-linux-gnu) Storage_Error stack overflow
(or erroneous memory access)|
| Error detected at jx_ch4.adb:58:14                                       |
| Please submit a bug report; see http://gcc.gnu.org/bugs.html.            |
| Include the entire contents of this bug box in the report.               |
| Include the exact gcc or gnatmake command that you entered.              |
| Also include sources listed below in gnatchop format                     |
| (concatenated together with no headers between files).                   |
+==========================================================================+
Comment 1 Andrew Pinski 2004-12-22 06:09:11 UTC
Can you attach the files (or concat them as asked by the bug box) which are mentioned by the bug box 
(if there is any mentioned).
Comment 2 Andrew Pinski 2004-12-22 06:10:24 UTC
Also read http://gcc.gnu.org/bugs.html and the section about reporting Ada bugs.
Comment 3 sohail 2004-12-22 06:14:11 UTC
Created attachment 7803 [details]
All required files, concatenated without any header 

(1.5M uncompressed)
Comment 4 sohail 2004-12-22 06:16:38 UTC
I apologize:

- the system type: Linux sohail 2.6.9-rc2 i686
- the options when GCC was configured/built:

Configured with: /extra/tmp/portage/gcc-4.0.0/work/gcc-4.0-20041212/configure
--prefix=/usr --bindir=/usr/i686-pc-linux-gnu/gcc-bin/4.0
--includedir=/usr/lib/gcc/i686-pc-linux-gnu/4.0.0/include
--datadir=/usr/share/gcc-data/i686-pc-linux-gnu/4.0
--mandir=/usr/share/gcc-data/i686-pc-linux-gnu/4.0/man
--infodir=/usr/share/gcc-data/i686-pc-linux-gnu/4.0/info --enable-shared
--host=i686-pc-linux-gnu --target=i686-pc-linux-gnu --with-system-zlib
--enable-languages=c,c++,ada --enable-threads=posix --enable-long-long
--disable-checking --enable-cstdio=stdio --enable-clocale=generic
--enable-__cxa_atexit --enable-version-specific-runtime-libs
--with-gxx-include-dir=/usr/lib/gcc/i686-pc-linux-gnu/4.0.0/include/g++-v4
--with-local-prefix=/usr/local --disable-werror --enable-shared --enable-nls
--without-included-gettext --disable-multilib

- a description of the expected behavior: Compile
- a description of actual behavior: Bug box


Comment 5 sohail 2004-12-22 06:19:31 UTC
um, the file is in bzip2 format.... Sorry about that.
Comment 6 sohail 2004-12-22 06:21:00 UTC
Created attachment 7804 [details]
All required files, concatenated without any header
Comment 7 Andrew Pinski 2004-12-22 06:21:59 UTC
Actually bzip2 files are okay.
Confirmed, also on powerpc-darwin.  The bug is the gnat_to_gnu so this is a bug in the front-end.
Comment 8 Andrew Pinski 2004-12-22 06:24:31 UTC
The main thing in this case is just having the sources since it is an ICE. Sorry about too fast for asking 
you to read the documentation.
Comment 9 sohail 2004-12-22 06:30:43 UTC
(In reply to comment #8)
> The main thing in this case is just having the sources since it is an ICE.
Sorry about too fast for asking 
> you to read the documentation.

Its no problem, I read it, I was just having problems because the file was too
large initially.
Comment 10 Arnaud Charlet 2004-12-22 08:52:38 UTC
There's nothing critical about this PR, please stop bumping its priority: it
won't magically fix it, thanks.

Arno
Comment 11 sohail 2004-12-22 19:33:17 UTC
(In reply to comment #10)
> There's nothing critical about this PR, please stop bumping its priority: it
> won't magically fix it, thanks.

I thought it went from critical to normal. Sounds normal to me.
Comment 12 sohail 2004-12-29 05:13:36 UTC
Seems like its choking on line 256 in jx_ch4.adb. I *think* gnat thinks that its
an elaboration procedure but I'm not sure if it is or not.

Just trying to help :)
Comment 13 sohail 2004-12-29 05:18:50 UTC
(In reply to comment #12)
> Seems like its choking on line 256 in jx_ch4.adb. I *think* gnat thinks that its
> an elaboration procedure but I'm not sure if it is or not.
> 
> Just trying to help :)

nm wrong node. sorry for the noise :)
Comment 14 sohail 2004-12-29 07:17:36 UTC
Created attachment 7840 [details]
return value assigned to incorrect variable

This seems to take care of the problem, I am running make check-ada atm. Seems
to be OK. Can anyone verify? I apologize if the patch is not in the correct
format, I couldn't find instructions on how to submit the patch
Comment 15 James A. Morrison 2004-12-30 01:44:09 UTC
 Is there a simplified testcase for this?
Comment 16 sohail 2004-12-30 02:44:36 UTC
(In reply to comment #15)
>  Is there a simplified testcase for this?

Unfortunately no, but a reply from the gcc-patches list shows that my patch does
fix *that* problem. It was just a typo really. Not enough caffine I suppose.
Comment 17 sohail 2004-12-30 02:46:03 UTC
reply from the gcc-patches list shows that my patch does fix *that* problem. It
was just a typo really. Not enough caffine I suppose.
Comment 18 GCC Commits 2004-12-30 11:24:19 UTC
Subject: Bug 19128

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	aj@gcc.gnu.org	2004-12-30 11:24:08

Modified files:
	gcc/ada        : ChangeLog trans.c 

Log message:
	2004-12-30  Sohail Somani <sohail@sohailsomani.com>
	
	PR ada/19128
	* trans.c (gnat_to_gnu): Fix typo: Use correct return variable.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/ChangeLog.diff?cvsroot=gcc&r1=1.619&r2=1.620
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ada/trans.c.diff?cvsroot=gcc&r1=1.87&r2=1.88