re PR ada/19128 (Bug box while building asharp)

2004-12-30  Sohail Somani <sohail@sohailsomani.com>

	PR ada/19128
	* trans.c (gnat_to_gnu): Fix typo: Use correct return variable.

From-SVN: r92732